--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste de Imagem de Fundo</title>
+    <style>
+        div.quadrado{
+            display: inline-block;
+            border: 1px solid Black;
+            border-radius: 10px;
+            background-color: lightgray;
+            width: 300px;
+            min-height: 300px;
+
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="quadrado">
+
+    </div>
+    <div class="quadrado">
+
+    </div>
+    <div class="quadrado">
+
+    </div>
 </body>
 </html>
