--- a/Index.html
+++ b/Index.html
@@ -37,5 +37,6 @@
     <div class="quadrado" id="q3">
 
     </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea architecto dolorum maxime quas odio quos harum, nobis id distinctio beatae blanditiis, consequuntur quidem magni nihil placeat veniam hic vitae.</p>
 </body>
 </html>
