--- a/fundo006.html
+++ b/fundo006.html
@@ -26,7 +26,8 @@
 <body>
     <main>
         <h1>Teste de imagens</h1>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero perferendis nobis dolorem, doloribus velit ut? Ullam vero facilis corrupti! Perferendis veritatis repellendus dolor, alias temporibus a aspernatur minima rerum dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae inventore nemo distinctio, deserunt nostrum voluptate iusto ab beatae facere animi pariatur est id rerum autem provident, magnam earum odit nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur ipsa maxime a error perferendis, fugit cum sequi animi accusamus quo aut repellat quos nulla! Culpa, at! Eveniet, saepe voluptates.
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero perferendis nobis dolorem, doloribus velit ut? Ullam vero facilis corrupti! Perferendis veritatis repellendus dolor, alias temporibus a aspernatur minima rerum dicta. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae inventore nemo distinctio, deserunt nostrum voluptate iusto ab beatae facere animi pariatur est id rerum autem provident, magnam earum odit nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur ipsa maxime a error perferendis, fugit cum sequi animi accusamus quo aut repellat quos nulla! Culpa, at! Eveniet, saepe voluptates.
+    </p>
     </main>
 </body>
 </html>
