--- a/exercicio/exe026/mq003/index.html
+++ b/exercicio/exe026/mq003/index.html
@@ -7,6 +7,7 @@
 
     <style>
         /* Declarações Geral*/
+      @media all {
         *{
             margin: 0px;
             padding: 0px;
@@ -26,8 +27,9 @@
             text-shadow: 2px 2px 0px #1526a7;
             padding: 10px;
         }
-
+    }
         /* Declarações retrato */
+
         @media screen and (orientation: portrait) {
             body{
             background-image: url(../imagens/cev-portrait.jpg) ;
@@ -37,6 +39,7 @@
         }
 
         /*Declarações paisagem*/
+        
         @media screen and (orientation: landscape) {
             body{
             background: url(../imagens/cev-landscape.jpg);
